assets/css/mainMenu.css
.dialogue, #rules-screen {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
  width: 100%;
  height: 100%;
  
}

#submitName{
  padding: .45rem;

}

.hades-intro, .rules-img{
  max-width: 700px;
  width: 90%;
  animation-name: floating;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}

.error {
  display: none;
}

#text {
  overflow: hidden;
  padding: 0;
  margin: 0;
}

.bubble {
  border: 2px solid #ffffff;
  background: transparent;
  color: #ffffff;
  font-family: Arial;
  font-size: 20px;
  line-height: 2rem;
  text-align: center;
  max-width: 400px;
  width: 90%;
  word-break: break-word;
  border-radius: 10px;
  padding: 10px;
  z-index: 5;
  animation-name: floating;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}

.bubble:after {
  content: "";
  position: absolute;
  display: block;
  width: 0;
  z-index: 5;
  border-style: solid;
  border-color: white transparent;
  border-width: 20px 20px 0;
  bottom: -20px;
  left: 7%;
  margin-left: -20px;
}

.menu-buttons > button {
  display: flex;
  flex-direction: column;
  margin-top: 2rem;
  animation-name: floating;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}

#understand-start-game {
  margin-top: 2rem;
  padding: 0.45rem;
  visibility: hidden;
  animation-name: floating;
  animation-duration: 3s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}

#hades-menu {
  visibility: hidden;
}

#rules-screen {
  display: none;
}

@keyframes floating {
  0% {
    transform: translate(0, 0px);
  }
  50% {
    transform: translate(0, 15px);
  }
  100% {
    transform: translate(0, -0px);
  }
}

